--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: var(--midnightBlue);
+    // background: var(--midnightBlue);
     font-family: "Atkinson Hyperlegible", sans-serif;
     display: flex;
     color: var(--white);
@@ -22,8 +22,37 @@ body {
 }
 
 #app {
+    margin: auto;
+    height: 100%;
+    width: 100%;
+}
+
+.app {
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
+}
+
+// .app-section {
+// width: 100%;
+// height: 100%;
+// display: flex;
+// justify-content: center;
+// align-items: center;
+// }
+
+.pixi-container {
+    max-width: 100vw;
+    max-height: 100vh;
+
+    width: 100%;
+    height: 100%;
+    canvas {
+        max-width: inherit;
+        max-height: inherit;
+        height: auto;
+        width: auto;
+    }
 }
