--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 :root {
     --orange: #fda214;
     --blueGray: #bcced9;
+    --darkGray: #979797;
     --darkBlue: #304859;
     --midnightBlue: #152938;
     --lightGray: #f2f2f2;
